--- a/b.html
+++ b/b.html
@@ -5,8 +5,7 @@
 
     </head>
     <body>
-        <p>This is Master branch</p>
-        <h1>This is Branch1</h1>
-        <h2>This is branch2</h2>
+        <p>This is Main branch</p>
+        
     
     </body>
